# mdformat-myst

./: .bumpversion.cfg  .gitignore  .mypy.ini  .pre-commit-config.yaml  README.md  pyproject.toml  tox.ini
.github/workflows/: tests.yml
mdformat_myst/: __init__.py  _directives.py  plugin.py
tests/: pre-commit-test.md  test_commonmark_compliancy.py  test_mdformat_myst.py
tests/data/: fixtures.md
