[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"


[tool.flit.metadata]
module = "mdformat_myst"
author = "Taneli Hukkinen"
maintainer = "Executable Book Project"
maintainer-email = "executablebooks@gmail.com"
description-file = "README.md"
home-page = "https://github.com/hukkinj1/mdformat-myst"
license = "MIT"
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = "mdformat,markdown,formatter,gfm"

requires-python=">=3.7"
requires=[
    "mdformat >=0.7.0,<0.8.0",
    "mdit-py-plugins >=0.3.0",
    "mdformat-tables >=0.4.0",
    "mdformat-frontmatter >=0.3.2",
    "mdformat-footnote >=0.1.1",
    "ruamel.yaml >=0.16.0",
]

[tool.flit.metadata.requires-extra]
test = [
    "pytest",
    "coverage",
    "pytest-cov",
]
dev = ["pre-commit"]

[tool.flit.entrypoints."mdformat.parser_extension"]
myst = "mdformat_myst.plugin"


[tool.isort]
# Force imports to be sorted by module, independent of import type
force_sort_within_sections = true
# Group first party and local folder imports together
no_lines_before = ["LOCALFOLDER"]

# Configure isort to work without access to site-packages
known_first_party = ["mdformat_myst", "tests"]

# Settings for Black compatibility
profile = "black"


[tool.pytest.ini_options]
addopts = "--strict-markers --strict-config"
xfail_strict = true


[tool.mypy]
warn_unreachable = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
# Disabling incremental mode is required for `warn_unused_configs = true` to work
incremental = false
disallow_untyped_defs = true
check_untyped_defs = true
strict_equality = true
implicit_reexport = false
no_implicit_optional = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "markdown_it.*"
implicit_reexport = true

[[tool.mypy.overrides]]
module = "mdit_py_plugins.*"
implicit_reexport = true

[[tool.mypy.overrides]]
module = "ruamel.yaml.*"
implicit_reexport = true
